Fix image paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="hero-section">
       <!-- You can put this in hero-section or services -->
 
-      <div class="body-img zoom-in"><img src="/images/myimgae.png" alt="Hero Image" /></div>
+      <div class="body-img zoom-in"><img src="/images/myimage.png" alt="Hero Image" /></div>
       <div class="body-content fade-up">
         <h3>Hi</h3>
        <h2>I’m Shakir Waheed <br> a <span id="typed-text"></span></h2>
@@ -74,7 +74,7 @@
 
     <!-- about me section -->
     <div class="about-section  fade-up" id="about">
-      <div class="about-img"><img src="/images/myimgae.png" alt="About Me" /></div>
+      <div class="about-img"><img src="/images/myimage.png" alt="About Me" /></div>
       <div class="about-content">
         <h1>About <b>Me</b></h1>
        <p>
