--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="hero-section">
       <!-- You can put this in hero-section or services -->
 
-      <div class="body-img zoom-in"><img src="/images/myimage.png" alt="Hero Image" /></div>
+      <div class="body-img zoom-in"><img src="images/myimage.png" alt="Hero Image" /></div>
       <div class="body-content fade-up">
         <h3>Hi</h3>
         <h2>I’m Shakir Waheed <br> a <span id="typed-text"></span></h2>
@@ -80,7 +80,7 @@
 
     <!-- about me section -->
     <div class="about-section  fade-up" id="about">
-      <div class="about-img"><img src="/images/myimage.png" alt="About Me" /></div>
+      <div class="about-img"><img src="images/myimage.png" alt="About Me" /></div>
       <div class="about-content">
         <h1>About <b>Me</b></h1>
         <p>
@@ -290,7 +290,7 @@
       <div class="projects-cards">
         <div class="project-card">
           <div class="project-img">
-            <img src="/images/banner.jpg" alt="Project 1" />
+            <img src="images/banner.jpg" alt="Project 1" />
           </div>
           <h3>Saas Tool</h3>
           <p>This is a short description of Project One. It explains what the project is about.</p>
@@ -299,7 +299,7 @@
 
         <div class="project-card">
           <div class="project-img">
-            <img src="/images/miniproject1.png" alt="Project 2" />
+            <img src="images/miniproject1.png" alt="Project 2" />
           </div>
           <h3>Hospital Website</h3>
           <p>This is a short description of Project Two. It explains what the project is about.</p>
@@ -308,12 +308,12 @@
 
         <div class="project-card">
           <div class="project-img">
-            <img src="/images/Techcourses.jpg" alt="Project 3" />
+            <img src="images/Techcourses.jpg" alt="Project 3" />
           </div>
           <h3>Tech Courses Web Platform</h3>
           <p>💻 A full-stack Tech Courses Web Platform built with Node.js, Express, MongoDB, and vanilla JavaScript
             featuring user authentication, role-based access (Admin/Student), course management, and image uploads.</p>
-          <button class="explore-btn">Explore</button>
+          <a href="https://github.com/shakirwaheed037/Tech-Courses-Web-Platform"><button class="explore-btn">Explore</button></a>
         </div>
       </div>
     </section>
