--- a/index.html
+++ b/index.html
@@ -566,11 +566,6 @@
 
 
 
-
-    // modal script
-
-
-
     // Get modal and buttons
     const modal = document.getElementById("hireModal");
     const hireBtn = document.querySelector(".btn"); // first Hire Me button
@@ -594,7 +589,7 @@
     });
 
 
-    <!-- Certificate Modal Script -->
+    // <!-- Certificate Modal Script -->
 
     document.addEventListener("DOMContentLoaded", () => {
       const viewButtons = document.querySelectorAll(".view-btn");
