--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About - Shakir Waheed</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 
   <style>
@@ -64,6 +66,9 @@
   transform: scale(1.05);
 }
 
+.cv-head{
+  color: white;
+}
 
   .container {
     max-width: 960px;
@@ -189,7 +194,7 @@
 
 
   <div class="container">
-    <header>
+    <header class="cv-head" >
       <h1>Shakir Waheed</h1>
       <p>Frontend Developer | WordPress Expert | MERN Stack Learner</p>
       <p>Email: shakir@example.com | Phone: +92-XXX-XXXXXXX</p>
@@ -265,6 +270,23 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
   <script>
+
+    const toggleBtn = document.getElementById("toggle-btn");
+    const navLinks = document.querySelector(".nav-link");
+
+    toggleBtn.addEventListener("click", () => {
+      navLinks.classList.toggle("show");
+    });
+
+    const navLinkItems = document.querySelectorAll(".nav-link li a");
+
+    navLinkItems.forEach(link => {
+      link.addEventListener("click", () => {
+        if (navLinks.classList.contains("show")) {
+          navLinks.classList.remove("show");
+        }
+      });
+    });
     //  star animation 
 
     const canvas = document.getElementById("starfield");
