--- a/about.html
+++ b/about.html
@@ -8,7 +8,9 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
      <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="about.css">
 
+  
  
 </head>
 
@@ -28,9 +30,10 @@
       <ul class="nav-link">
         <li><a href="index.html">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#our-services">Services</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html">Services</a></li>
+         <li><a href="blog.html">Blog</a></li>
+        <li><a href="index.html">Projects</a></li>
+        <li><a href="index.html">Contact</a></li>
       </ul>
     </div>
   </header>
