updated index.html and add some image

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
   <header id="home-logo">
     <div class="navbar slide-down">
-      <div class="nav-logo"><h1>Cod<b>e</b>x<b>Sha</b>kir</h1></div>
+      <div class="nav-logo"><h1>Cod<b>e</b>By<b>Sha</b>kir</h1></div>
 
 <div class="toggle-button" id="toggle-btn">
   <i class="fas fa-bars"></i>
@@ -81,15 +81,15 @@
   <div class="container">
     <header class="cv-head" >
       <h1>Shakir Waheed</h1>
-      <p>Frontend Developer | WordPress Expert | MERN Stack Learner</p>
-      <p>Email: shakir@example.com | Phone: +923316708756</p>
-      <p>Portfolio: www.darkcoder.com | GitHub: github.com/shakir</p>
+      <p>Frontend Developer | WordPress | MERN Stack Learner</p>
+      <p>Email: shakir03748@gmail.com | Phone: +923316708756</p>
+      <p>Portfolio:https://shakirwaheed037.github.io/codexshakir-portfolio/ | GitHub: https://github.com/shakirwaheed037</p>
     </header>
 
     <section class="summary">
       <h2>Profile Summary</h2>
       <p>
-        Passionate frontend developer with 5+ years of experience in HTML, CSS, JavaScript, and React.js. Skilled in responsive UI/UX design, WordPress development, and currently expanding backend skills (Node.js, Express.js, MongoDB). Seeking remote internship or job to contribute and grow in a collaborative environment.
+        Passionate frontend developer with 1 of experience in HTML, CSS, JavaScript, and React.js. Skilled in responsive UI/UX design, WordPress development, and currently expanding backend skills (Node.js, Express.js, MongoDB). Seeking remote internship or job to contribute and grow in a collaborative environment.
       </p>
     </section>
 
@@ -100,7 +100,7 @@
         <li>React.js, Responsive Design, UI/UX</li>
         <li>WordPress Theme & Plugin Customization</li>
         <li>Git & GitHub, REST APIs</li>
-        <li>Learning Node.js, Express, MongoDB</li>
+        <li>Learning Node.js, Express, MongoDB and API</li>
       </ul>
     </section>
 
@@ -127,15 +127,21 @@
     <section class="education">
       <h2>Education</h2>
       <p><strong>BS Computer Science</strong> – Kohat University of Science & Technology (KUST)<br>
-      2021 – 2025 (Expected)</p>
+      2022 – 2026 (Expected)</p>
+      <p><strong>FSc</strong> – Paradise Children Academy & Model College Sarozai (Hangu)<br>
+      2021 – 2022 </p>
+      <p><strong>Matric</strong> – Paradise Children Academy & Model College Sarozai (Hangu)<br>
+      2020</p>
     </section>
 
     <section class="projects">
       <h2>Projects</h2>
       <ul>
-        <li><strong>Interns – FYP:</strong> Internship & LMS Web Portal (Full-stack Project)</li>
+        <li><strong>Interns – FYP:</strong> Online Internship Management & Placement System (Full-stack Project)</li>
         <li><strong>Car Showroom App:</strong> Node.js + Express backend with full CRUD API</li>
-        <li><strong>Portfolio Website:</strong> Custom responsive portfolio “Dark Coder”</li>
+          <li><strong>Tech Courses web platform:</strong> (Full Stack)Node.js + Express backend with full CRUD API</li>
+            <li><strong>Todo list with React:</strong> Use of React.js props and useState hooks</li>
+        <li><strong>Portfolio Website:</strong> Custom responsive portfolio “CodeByShakir”</li>
       </ul>
     </section>
 
@@ -145,7 +151,7 @@
   </div>
 
   <footer>
-    <h5><b>Shakir Waheed</b> Portfolio</h5>
+    <h5><b>“CodeByShakir”</b> Portfolio</h5>
     <p>&copy; 2024 All rights reserved</p>
   </footer>
 
