--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
   <!-- Navbar -->
     <header id="home-logo">
     <div class="navbar slide-down">
-      <div class="nav-logo"><h1>Cod<b>e</b>x<b>Sha</b>kir</h1></div>
+      <div class="nav-logo"><h1>Cod<b>e</b>By<b>Sha</b>kir</h1></div>
 
 <div class="toggle-button" id="toggle-btn">
   <i class="fas fa-bars"></i>
