--- a/index.html
+++ b/index.html
@@ -40,26 +40,6 @@
 </div>
 
 
-<!-- Solar System Background -->
-<div class="solar-system">
-  <div class="sun"></div>
-
-  <div class="orbit orbit-earth">
-    <div class="planet earth"></div>
-  </div>
-
-  <div class="orbit orbit-venus">
-    <div class="planet venus"></div>
-  </div>
-
-  <div class="orbit orbit-jupiter">
-    <div class="planet jupiter"></div>
-  </div>
-
-  <div class="orbit orbit-mars">
-    <div class="planet mars"></div>
-  </div>
-</div>
 
 
 
@@ -192,39 +172,63 @@
 
 
     <!-- Achievements / Certificates Section -->
-    <section class="achievements" id="achievements" data-aos="fade-up">
-      <h1>My <b>Achievements</b> & <b>Certificates</b></h1>
+ <section class="achievements" id="achievements" data-aos="fade-up">
+  <h1>My <b>Achievements</b> & <b>Certificates</b></h1>
 
-      <div class="achievements-grid">
-        <div class="achievement-card" data-aos="zoom-in">
-          <i class="fa-brands fa-react"></i>
-          <h3>Front-End Development with React</h3>
-          <p>Coursera · 2024</p>
-          <a href="#" class="view-btn" data-cert="cert1">View Certificate</a>
-        </div>
+  <div class="achievements-grid">
 
-        <div class="achievement-card" data-aos="zoom-in" data-aos-delay="150">
-          <i class="fa-solid fa-server"></i>
-          <h3>Back-End Development with Node.js</h3>
-          <p>Self Learning · 2025</p>
-          <a href="#" class="view-btn" data-cert="cert2">View Certificate</a>
-        </div>
+    <div class="achievement-card" data-aos="zoom-in">
+      <i class="fa-brands fa-react"></i>
+      <h3>Front-End Development with React</h3>
+      <p>Coursera · 2024</p>
+      <a href="#" class="view-btn" data-cert="cert1">View Certificate</a>
+    </div>
 
-        <div class="achievement-card" data-aos="zoom-in" data-aos-delay="300">
-          <i class="fa-brands fa-wordpress"></i>
-          <h3>Frontend Development</h3>
-          <p>PS Coder · 2024</p>
-          <a href="#" class="view-btn" data-cert="cert3">View Certificate</a>
-        </div>
+    <div class="achievement-card" data-aos="zoom-in">
+      <i class="fa-brands fa-bootstrap"></i>
+      <h3>Front-End Development with Bootstrap</h3>
+      <p>Coursera · 2024</p>
+      <a href="#" class="view-btn" data-cert="cert2">View Certificate</a>
+    </div>
 
-        <div class="achievement-card" data-aos="zoom-in" data-aos-delay="450">
-          <i class="fa-solid fa-graduation-cap"></i>
-          <h3>Prompt Engineering</h3>
-          <p>Coursera · 2024</p>
-          <a href="#" class="view-btn" data-cert="cert4">View Certificate</a>
-        </div>
-      </div>
-    </section>
+    <div class="achievement-card" data-aos="zoom-in">
+      <i class="fa-brands fa-github"></i>
+      <h3>Introduction to Git & GitHub</h3>
+      <p>Coursera · 2024</p>
+      <a href="#" class="view-btn" data-cert="cert3">View Certificate</a>
+    </div>
+
+    <div class="achievement-card" data-aos="zoom-in">
+      <i class="fa-solid fa-code"></i>
+      <h3>Introduction to HTML, CSS and JS</h3>
+      <p>Coursera · 2024</p>
+      <a href="#" class="view-btn" data-cert="cert4">View Certificate</a>
+    </div>
+
+    <div class="achievement-card" data-aos="zoom-in" data-aos-delay="150">
+      <i class="fa-solid fa-server"></i>
+      <h3>Back-End Development with Node.js</h3>
+      <p>Self Learning · 2025</p>
+      <a href="#" class="view-btn" data-cert="cert5">View Certificate</a>
+    </div>
+
+    <div class="achievement-card" data-aos="zoom-in" data-aos-delay="300">
+      <i class="fa-solid fa-code"></i>
+      <h3>Frontend Development</h3>
+      <p>PS Coders · 2024</p>
+      <a href="#" class="view-btn" data-cert="cert6">View Certificate</a>
+    </div>
+
+    <div class="achievement-card" data-aos="zoom-in" data-aos-delay="450">
+      <i class="fa-solid fa-graduation-cap"></i>
+      <h3>Front-End Development</h3>
+      <p>DEP · 2024</p>
+      <a href="#" class="view-btn" data-cert="cert7">View Certificate</a>
+    </div>
+
+  </div>
+</section>
+
 
     <!-- Modal Popup for Certificates -->
     <div class="certificate-modal" id="certificateModal">
@@ -666,42 +670,36 @@ setInterval(() => {
 
     // <!-- Certificate Modal Script -->
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const viewButtons = document.querySelectorAll(".view-btn");
-      const modal = document.getElementById("certificateModal");
-      const modalImg = document.getElementById("certificateImage");
-      const closeModal = document.querySelector(".close-modal");
+   document.addEventListener("DOMContentLoaded", () => {
+  const viewButtons = document.querySelectorAll(".view-btn");
+  const modal = document.getElementById("certificateModal");
+  const modalImg = document.getElementById("certificateImage");
+  const closeModal = document.querySelector(".close-modal");
 
-      const certificates = {
-        cert1: "certificates/react.png",
-        cert2: "certificates/node.png",
-        cert3: "certificates/wordpress.png",
-        cert4: "certificates/prompt.png",
-      };
+  const certificates = {
+    cert1: "certificates/courserafsreact.jpg",
+    cert2: "certificates/courserabootstrap.jpg",
+    cert3: "certificates/courseragithub.jpg",
+    cert4: "certificates/courseraintrohtmlcssjs.jpg",
+    cert5: "certificates/nodebackend.jpg",
+    cert6: "certificates/pscodercertificate.jpg",
+    cert7: "certificates/DEP.jpg"
+  };
 
-      viewButtons.forEach((btn) => {
-        btn.addEventListener("click", (e) => {
-          e.preventDefault();
-          const certId = btn.getAttribute("data-cert");
-          modalImg.src = certificates[certId];
-          modal.style.display = "flex";
-        });
-      });
-
-      // Close modal when clicking "X"
-      if (closeModal) {
-        closeModal.addEventListener("click", () => {
-          modal.style.display = "none";
-        });
-      }
-
-      // Close modal when clicking outside image
-      window.addEventListener("click", (e) => {
-        if (e.target === modal) {
-          modal.style.display = "none";
-        }
-      });
+  viewButtons.forEach((btn) => {
+    btn.addEventListener("click", (e) => {
+      e.preventDefault();
+      const certId = btn.getAttribute("data-cert");
+      modalImg.src = certificates[certId];
+      modal.style.display = "flex";
     });
+  });
+
+  closeModal.addEventListener("click", () => (modal.style.display = "none"));
+  window.addEventListener("click", (e) => {
+    if (e.target === modal) modal.style.display = "none";
+  });
+});
 
 
     // // testinmial section script
