updated index.html and imges

--- a/index.html
+++ b/index.html
@@ -343,11 +343,11 @@
       <div class="projects-cards">
         <div class="project-card">
           <div class="project-img">
-            <img src="images/banner.jpg" alt="Project 1" />
+            <img src="images/reacttodoapp.jpg" alt="Project 1" />
           </div>
-          <h3>Saas Tool</h3>
-          <p>This is a short description of Project One. It explains what the project is about.</p>
-          <button class="explore-btn">Explore</button>
+          <h3>React Todo App</h3>
+          <p>A simple and interactive To-Do application built using React.js. This project allows users to efficiently manage daily tasks by adding, viewing, and deleting to-do items. It demonstrates the use of React components, props, state management with useState hook, conditional rendering, and dynamic list rendering.</p>
+          <a href="https://github.com/shakirwaheed037/Todo-app-with-react.js.git"><button class="explore-btn">Explore</button></a>
         </div>
 
         <div class="project-card">
@@ -357,6 +357,17 @@
           <h3>Hospital Appointment Management Web</h3>
           <p>A responsive Hospital Appointment Website built using Bootstrap 5. It allows patients to easily schedule appointments, view doctor profiles, and contact the hospital directly. The interface is clean, mobile-friendly, and optimized for user convenience.</p>
           <a href="https://github.com/shakirwaheed037/hospitalManagementWebsite.git" target="_blank"><button class="explore-btn">Explore</button></a>
+        </div>
+
+        <div class="project-card">
+          <div class="project-img">
+            <img src="images/reactcalculater.jpg" alt="Project 3" />
+          </div>
+          <h3>React Calculater</h3>
+          <p>💻React Calculator is a simple and responsive calculator built using React.js.
+It performs basic arithmetic operations like addition, subtraction, multiplication, and division.
+The app uses React state management (useState) to update results dynamically.</p>
+          <a href="https://github.com/shakirwaheed037/React-Calculater.git" target="_blank"><button class="explore-btn">Explore</button></a>
         </div>
 
         <div class="project-card">
