updated the index.html and add image

--- a/index.html
+++ b/index.html
@@ -379,6 +379,16 @@ The app uses React state management (useState) to update results dynamically.</p
             featuring user authentication, role-based access (Admin/Student), course management, and image uploads.</p>
           <a href="https://github.com/shakirwaheed037/Tech-Courses-Web-Platform" target="_blank"><button class="explore-btn">Explore</button></a>
         </div>
+
+        
+        <div class="project-card">
+          <div class="project-img">
+            <img src="images/agecalculater.jpg" alt="Project 3" />
+          </div>
+          <h3>Advanced Age Calculater</h3>
+          <p>💻 I built an Advanced Age Calculator using React.js to strengthen my frontend skills. It calculates age in years, months, days, and hours with accurate input handling and a smooth UI. The project helped me understand component structure and state management. A simple tool that sharpened my practical React learning.</p>
+          <a href="https://github.com/shakirwaheed037/Age-Calculater" target="_blank"><button class="explore-btn">Explore</button></a>
+        </div>
       </div>
     </section>
 
